# thermite

./: .gitignore  .pylintrc  Cargo.toml  README.md
.github/workflows/: test.yml
data/: GRCh38-2020-A-chr21.fasta.fai  GRCh38-2020-A-chrM.fasta.tai  GRCh38-2020-A-chrM.gtf  Makefile  cellranger_pbmc10k_chr21_500k_reads.bam.bai  cellranger_pbmc10k_chr21_500k_reads.sam.REMOVED.git-id  cellranger_pbmc10k_chrM_500k_reads.bam  cellranger_pbmc10k_chrM_500k_reads.bam.bai  test_query.fastq  test_ref.fasta  test_ref.fasta.fai  test_ref.gtf
lib/testing/: alignment_metrics.py  comparison_metrics.txt  count_matrix_metrics.ipynb  count_matrix_metrics.py
src/: aligner.rs  aln_writer.rs  index.rs  lib.rs  main.rs  swg.rs  txome.rs  wrapper.rs
src/cr_transcriptome/: mod.rs  parse_gtf.rs  transcript_index.rs  transcript_sequence.rs  transcriptome.rs  utils.rs
