[package]
name = "thermite-aligner"
version = "0.1.0"
edition = "2018"
description = "RNA aligner in Rust."

[lib]
name = "thermite_aligner"
path = "src/lib.rs"

[[bin]]
name = "thermite"
path = "src/main.rs"

[dependencies]
clap = { version = "^3.0.0-beta.2", features = ["derive"] }
anyhow = "^1.0.42"
needletail = "^0.4.1"
rayon = "^1.5.1"
bio = "^0.37.0"
serde = { version = "^1.0", features = ["derive"] }
bincode = "^1.3.3"
