[package]
description = "RNA aligner in Rust."
edition = "2018"
name = "thermite-aligner"
resolver = "2"
version = "0.1.0"

[lib]
name = "thermite_aligner"
path = "src/lib.rs"

[[bin]]
name = "thermite"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.42"
bincode = "^1.3.3"
bio = { version = "^0.37.0", git = "https://github.com/Daniel-Liu-c0deb0t/rust-bio", branch = "sampled-sa", features = ["runtime-dispatch-simd"] }
bio-types = "^0.12.0"
bio_cratesio = { version = "^0.37.0", package = "bio", features = ["runtime-dispatch-simd"] }
clap = { version = "^3.0.0-beta.2", features = ["derive"] }
needletail = "^0.4.1"
noodles = { version = "^0.1.0", features = ["bam", "core", "gff", "sam"] }
rayon = "^1.5.1"
serde = { version = "^1.0", features = ["derive"] }
transcriptome = { version = "^0.1.0", git = "https://github.com/10XDev/cellranger" }

[profile.dev]
opt-level = 3
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
debug = 1
lto = true

[profile.test]
opt-level = 3
